# cpfyp

./: .env  .gitignore  CHANGELOG.md  CPP_EXCHANGE_EXPANSION.md  CPP_IMPLEMENTATION.md  DEPLOYMENT.md  INSTALL.md  README.md  TECHNICAL_FEATURES.md  TRIANGULAR_ARBITRAGE.md  USAGE.md  config.py  dashboard.py  dashboard_advanced.py  docker-compose.yml  engine.py  engine_cross_triangular.py  engine_dex_cex.py  engine_execution.py  engine_futures_spot.py  engine_latency.py  engine_metrics.py  engine_ml.py  engine_ml_advanced.py  engine_orderbook.py  engine_replay.py  engine_statistical.py  engine_storage.py  engine_timescale.py  engine_triangular.py  main.py  requirements.txt
cpp/: CMakeLists.txt  README.md  build.bat  build.sh
cpp/include/: binance_client.hpp  bybit_client.hpp  coinbase_client.hpp  kraken_client.hpp  okx_client.hpp  price_feed_server.hpp  price_update.hpp  websocket_client.hpp
cpp/src/: binance_client.cpp  bybit_client.cpp  coinbase_client.cpp  kraken_client.cpp  main.cpp  okx_client.cpp  price_feed_server.cpp  price_update.cpp  websocket_client.cpp
docker/: Dockerfile.cpp  Dockerfile.python  prometheus.yml
engines/: __init__.py
exchanges/: __init__.py  base.py  binance.py  bybit.py  coinbase.py  cpp_bridge.py  kraken.py  okx.py  simulator.py
scripts/: deploy_aws.sh  init_db.sql  setup_aws_infrastructure.sh
src/: __init__.py
src/api/: __init__.py  export.py
src/auth/: __init__.py  dependencies.py  models.py  routes.py  service.py
src/core/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_auth.py  test_engine.py  test_portfolio.py
(+7 files in other folders)
